@@ -199,17 +199,17 @@ reserved:	ATTRIBUTE
 reserved:	AUTHOR
 reserved:	AUTO-MINIMIZE
 reserved:	AUTO-RESIZE
-reserved:	AUTO-SKIP
+reserved:	AUTO-SKIP=AUTO
 reserved:	AUTO
 reserved:	AUTOMATIC
-reserved:	AUTOTERMINATE
+reserved:	AUTOTERMINATE=AUTO
 reserved:	BACKGROUND-COLOR
-reserved:	BACKGROUND-COLOUR
+reserved:	BACKGROUND-COLOUR=BACKGROUND-COLOR
 reserved:	BACKGROUND-HIGH
 reserved:	BACKGROUND-LOW
 reserved:	BACKGROUND-STANDARD
 reserved:	BACKWARD
-reserved:	BEEP
+reserved:	BEEP=BELL
 reserved:	BEFORE
 reserved:	BELL
 reserved:	BINARY
@@ -330,7 +330,7 @@ reserved:	DUPLICATES
 reserved:	DYNAMIC
 reserved:	ECHO
 reserved:	ELSE
-reserved:	EMPTY-CHECK
+reserved:	EMPTY-CHECK=REQUIRED
 reserved:	ENABLED
 reserved:	ENCRYPTION
 reserved:	END
@@ -398,7 +398,7 @@ reserved:	FONT
 reserved:	FOOTING
 reserved:	FOR
 reserved:	FOREGROUND-COLOR
-reserved:	FOREGROUND-COLOUR
+reserved:	FOREGROUND-COLOUR=FOREGROUND-COLOR
 reserved:	FROM
 reserved:	FULL
 reserved:	FUNCTION
@@ -451,7 +451,7 @@ reserved:	LEADING
 reserved:	LEFT
 reserved:	LEFTLINE
 reserved:	LENGTH
-reserved:	LENGTH-CHECK
+reserved:	LENGTH-CHECK=FULL
 reserved:	LESS
 reserved:	LINAGE
 reserved:	LINAGE-COUNTER
