@@ -175,3 +175,13 @@ specify-all-reserved: no
 # ignored if GnuCOBOL uses that word as a reserved word.
 #   Entries of the form word-1=word-2 define word-1 as an alias for default
 # reserved word word-2. No spaces are allowed around the equal sign.
+reserved:	AUTO-SKIP=AUTO
+reserved:	AUTOTERMINATE=AUTO
+reserved:	BEEP=BELL
+reserved:	BINARY-INT=BINARY-LONG
+reserved:	BINARY-LONG-LONG=BINARY-DOUBLE
+reserved:	EQUALS=EQUAL
+reserved:	INITIALISE=INITIALIZE
+reserved:	INITIALISED=INITIALIZED
+reserved:	ORGANISATION=ORGANIZATION
+reserved:	SYNCHRONISED=SYNCHRONIZED
