@@ -204,7 +204,7 @@ reserved:	ATTRIBUTES
 reserved:	AUTHOR
 reserved:	AUTO*
 reserved:	AUTO-HYPHEN-SKIP
-reserved:	AUTO-SKIP
+reserved:	AUTO-SKIP=AUTO
 reserved:	AUTOMATIC
 reserved:	B-AND
 reserved:	B-EXOR
@@ -214,9 +214,9 @@ reserved:	B-OR
 reserved:	B-RIGHT
 reserved:	B-XOR
 reserved:	BACKGROUND-COLOR*
-reserved:	BACKGROUND-COLOUR*
+reserved:	BACKGROUND-COLOUR*=BACKGROUND-COLOR
 reserved:	BACKWARD
-reserved:	BEEP
+reserved:	BEEP=BELL
 reserved:	BEFORE
 reserved:	BELL
 reserved:	BINARY
@@ -350,7 +350,7 @@ reserved:	EJECT
 reserved:	ELEMENT*
 reserved:	ELSE
 reserved:	EMI
-reserved:	EMPTY-CHECK
+reserved:	EMPTY-CHECK=REQUIRED
 reserved:	ENABLE
 reserved:	ENCODING
 reserved:	END
@@ -427,7 +427,7 @@ reserved:	FLOAT-SHORT
 reserved:	FOOTING
 reserved:	FOR
 reserved:	FOREGROUND-COLOR*
-reserved:	FOREGROUND-COLOUR*
+reserved:	FOREGROUND-COLOUR*=FOREGROUND-COLOR
 reserved:	FROM
 reserved:	FULL*
 reserved:	FUNCTION
@@ -495,7 +495,7 @@ reserved:	LEFT
 reserved:	LEFT-JUSTIFY
 reserved:	LEFTLINE
 reserved:	LENGTH
-reserved:	LENGTH-CHECK
+reserved:	LENGTH-CHECK=FULL
 reserved:	LESS
 reserved:	LIMIT
 reserved:	LIMITS
@@ -731,9 +731,8 @@ reserved:	THREAD-POINTER
 reserved:	THROUGH
 reserved:	THRU
 reserved:	TIME
-reserved:	TIME-OUT
 reserved:	TIME-RECORD
-reserved:	TIMEOUT
+reserved:	TIMEOUT=TIME-OUT
 reserved:	TIMES
 reserved:	TIMESTAMP
 reserved:	TIMESTAMP-OFFSET
