@@ -1,7 +1,13 @@
 
+2016-06-14  Edward Hart <edward.dan.hart@gmail.com>
+
+	* reserved.c (default_reserved_words): moved uncommon, non-standard
+	  aliases (e.g., AUTOTERMINATE for AUTO) to config files.
+	* parser.y: renamed TIMEOUT token to TIME-OUT.
+
 2016-06-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
-	* pplex.c (ppinput): FR #126 treat invalid indicator (free format) as
+	* pplex.l (ppinput): FR #126 treat invalid indicator (free format) as
 	  line comment instead of aborting compilation
 
 2016-06-12  Edward Hart <edward.dan.hart@gmail.com>
